<resources>
    <string name="app_name">My Application</string>
    <string name="tasks">Tasks</string>
    <string name="star">★</string>
    <string name="my_tasks">My tasks</string>
    <string name="new_list">+New list</string>
    <string name="add_task">Add task</string>
    <string name="new_task">New task</string>
    <string name="date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="todo">TODO</string>
    <string name="backpage">backPage</string>
    <string name="deletetask">deleteTask</string>
    <string name="add_details">Add details</string>
    <string name="add_date">Add date</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="list">List</string>
    <string name="add_new_list">Add new list</string>
    <string name="favorites">Favorites</string>
</resources>