<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.add.AddTaskFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="6dp"
        android:background="@android:color/transparent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/backpage" />

    <Button
        android:id="@+id/btn_addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="7dp"
        android:background="@android:color/transparent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/add_task" />


    <EditText
        android:id="@+id/title_detail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/tasks"
        android:textSize="26sp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <CheckBox
        android:id="@+id/favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/favorites_check_box"
        android:checked="false"
        android:layout_marginTop="9dp"
        android:theme="@style/CheckboxStyle"
        app:layout_constraintEnd_toStartOf="@+id/title_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        tools:ignore="RtlSymmetry,UnknownIdInLayout,UsingOnClickInXml" />

    <EditText
        android:id="@+id/discribtion_detail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#5C5C5C"
        android:hint="@string/add_details"
        android:textSize="19sp"
        android:layout_marginStart="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_detail"/>

    <TextView
        android:id="@id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#5C5C5C"
        android:text="@string/add_date"
        android:textSize="19sp"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discribtion_detail"/>

</androidx.constraintlayout.widget.ConstraintLayout>